custom.css
/* ... */
/* preferences */
.sidebar_menu_list_item {
  color: var(--text);
}

/* channel details */
#details_tab .feature_sli_channel_insights .channel_created_section .creator_link, #details_tab .feature_sli_channel_insights .channel_purpose_section .channel_purpose_text {
  color: var(--text);
}

/* archives banner */
.p-archives_banner {
  background: var(--primary);
  color: var(--text-bright);
}

/* message placeholder */
#msg_input.texty_legacy .ql-placeholder {
  color: var(--text);
  opacity: .15 !important;
}

/* shared files */
#client-ui .file_list_item.file_list_item--redesign {
  border: 1px solid var(--border-dim);
}

/* shared text file preview text */
#client-ui .file_comment_item .monospace, 
#client-ui .file_list_item .monospace, 
#client-ui .star_item ts-message .monospace, 
#files_list .file_comment_item .monospace, 
#files_list .file_list_item .monospace, 
#files_list .star_item ts-message .monospace {
  color: var(--text);
}

/* shared file title (in channel) */
.c-file__title {
  color: var(--primary);
}

/* download link overlay */
.c-file__slide--meta {
  background: var(--background);
}

/* threads */
.p-threads_flexpane, .p-threads_flexpane__separator_count {
  color: var(--text);
}

.p-flexpane_header {
  background: var(--background-elevated);
  border-bottom: unset;
}

.p-threads_flexpane__header_channel_name {
  color: unset;
}

.p-threads_footer__input .p-message_input_field {
  background: var(--background-elevated);
}

.p-threads_footer__input .p-message_input_field.focus {
  border-color: var(--background-hover);
}

.p-threads_footer__input--legacy .p-message_input_field .ql-placeholder {
  color: var(--background-hover);
}

.p-threads_footer__input--legacy .p-message_input_field {
  border-color: var(--background-hover);
}

.p-threads_footer__input--legacy .p-message_input_file_button {
  border: unset;
}

/* new reactions ~3/19 */
.c-reaction--reacted.c-reaction--feature_new_reactions {
  background: var(--background);
}

.c-reaction--reacted.c-reaction--feature_new_reactions:not(.c-button--focus-visible), .c-reaction--reacted.c-reaction--feature_new_reactions:not(.focus-ring) {
  box-shadow: inset 0 0 0 1px var(--border-bright);
}

.c-reaction_add--feature_new_reactions {
  background: var(--background-hover);
}

/* search bar */
.search_focused .search_form {
  border-color: var(--border-dim);
}

.texty_legacy .ql-editor.ql-blank~.ql-placeholder {
  display: block;
  color: var(--text);
  opacity: .15 !important;
}

/* search modal */
.c-search_modal .popover>div {
  background-color: var(--background-elevated);
}

.c-search_modal:not(.c-search_modal--primarysearch) .c-search__input_box {
  background-color: var(--background-elevated);
}

.c-search__input_and_close {
  border-bottom: 1px solid var(--background-elevated);
}

.c-search_autocomplete footer {
  background-color: var(--background-elevated);
}

.c-search_autocomplete__suggestion_item {
  color: var(--text);
}

.c-search__tabs {
  background-color: var(--background-elevated);
}

.c-search__results {
  background: var(--background-elevated);
}

.c-message_group {
  border: 1px solid var(--border-bright);
  background-color: var(--background);
}

.c-search_message__body {
  color: var(--text);
}

.c-search_message__attachment_body {
  color: #7c7b7b;
}

.p-message_limit_banner {
  color: var(--text);
  background-color: var(--background-hover);
  border: 1px solid var(--border-dim);
}

.p-search_filter__dates {
  background-color: var(--background-elevated);
  border: 1px solid var(--background-hover);
}

.p-search_filter__date:first-child {
  border-bottom: 1px solid var(--background-hover);
}

.c-search__extras {
  color: var(--text);
}

.p-search_filter__title_text {
  color: var(--text);
  background-color: var(--background-elevated);
}

.p-search_filter__date {
  color: var(--text);
}

.p-search_filter__title:before {
  border-bottom: 1px solid var(--background-hover);
}

.c-tabs__tab_menu {
  box-shadow: inset 0 -1px 0 0 var(--background-hover);
}

.c-pillow_file_container {
  background: var(--background);
}

.c-search__view .p-search_file .c-pillow_file__title {
  color: var(--text);
}

.p-search_filter .p-file_list__file_type_select, .p-search_filter__select .c-input_select {
  border-color: var(--background-hover);
  background: var(--background-elevated);
  color: var(--text);
}

.p-file_list__file_type_select .c-input_select__selected_value--placeholder {
  color: var(--text);
}

/* snippets */
.c-pillow_file__content--collapsed:after {
  background: linear-gradient(0deg,var(--background),hsla(0,0%,100%,0) 40px);
}

.c-message_kit__file__meta {
  color: var(--icon);
}

/* reactions */
.c-reaction__count {
  color: var(--icon);
}

/* foreword */
.p-message_pane__foreword__description, .p-message_pane__limited_history_alert {
  color: var(--text);
}

/********************************************************************************************/
/* End customizations by jpdillingham                                                       */
/********************************************************************************************/

